Bug 17945 - patch to avoid gcc warnings for libXfont
Summary: patch to avoid gcc warnings for libXfont
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Fonts/other (show other bugs)
Version: 7.3 (2007.09)
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: janitor, patch
Depends on:
Blocks:
 
Reported: 2008-10-07 05:11 UTC by Peter Breitenlohner
Modified: 2008-10-20 19:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch to avoid gcc warnings for libXfont (V 1.3.3) (1.24 KB, patch)
2008-10-07 05:11 UTC, Peter Breitenlohner
no flags Details | Splinter Review

Description Peter Breitenlohner 2008-10-07 05:11:51 UTC
Created attachment 19435 [details] [review]
patch to avoid gcc warnings for libXfont (V 1.3.3)

Attached is a small patch avoiding two gcc warnings for libXfont (V 1.3.3)
Comment 1 Alan Coopersmith 2008-10-20 19:33:11 UTC
Pushed to git master - thanks for the patch:

commit 6bf52de1fb84d61b227daf7a7077af9ea3ec27a3
Author: Peter Breitenlohner <peb@mppmu.mpg.de>
Date:   Mon Oct 20 19:32:23 2008 -0700

    X.Org Bug 17945: avoid gcc warnings for libXfont
    
    <http://bugs.freedesktop.org/show_bug.cgi?id=17945>
    
    Avoid two gcc warnings
    src/fontfile/ffcheck.c:150: warning: initialization discards qualifiers from
    src/fontfile/register.c:98: warning: initialization discards qualifiers from



Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.