X.Org Bug 17945: avoid gcc warnings for libXfont

<http://bugs.freedesktop.org/show_bug.cgi?id=17945>

Avoid two gcc warnings
src/fontfile/ffcheck.c:150: warning: initialization discards qualifiers from pointer target type
src/fontfile/register.c:98: warning: initialization discards qualifiers from pointer target type