src/fontfile/ffcheck.c
@@ -147,7 +147,7 @@ static const FontModule builtinFontModuleList[] = {
 void
 FontFileCheckRegisterFpeFunctions (void)
 {
-    FontModule *fmlist = builtinFontModuleList;
+    const FontModule *fmlist = builtinFontModuleList;
     
 #ifdef XFONT_BITMAP
     /* bitmap is always builtin to libXfont now */
